--- a/small-buisness-accounting/package.json
+++ b/small-buisness-accounting/package.json
@@ -13,9 +13,12 @@
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.0",
     "debug": "^2.2.0",
+    "dotenv": "^16.0.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6",
+    "sequelize": "^6.21.2",
+    "sequelize-auto": "^0.8.8",
     "serve-favicon": "^2.3.0"
   }
 }
