--- a/small-buisness-accounting/package.json
+++ b/small-buisness-accounting/package.json
@@ -16,9 +16,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.18",
     "pug": "^2.0.0-beta6",
     "sequelize": "^6.21.2",
     "sequelize-auto": "^0.8.8",
     "serve-favicon": "^2.3.0"
-  }
+  },
+  "main": "app.js"
 }
